k8s/database-endpoints.yaml
---
# --- POSTGRESQL ---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-ao
  namespace: ecommerce
spec:
  ports:
    - port: 5432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres-db-ao
  namespace: ecommerce
subsets:
  - addresses:
      - ip: 10.0.20.90
    ports:
      - port: 5432

# --- MONGODB ---
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-ao
  namespace: ecommerce
spec:
  ports:
    - port: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo-db-ao
  namespace: ecommerce
subsets:
  - addresses:
      - ip: 10.0.20.104
    ports:
      - port: 27017
