k8s/ingress-nginx-svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    loadbalancer.openstack.org/class: "cmc-loadbalancer-public"
    loadbalancer.openstack.org/flavor-id: "a80cfbb4-326b-4819-8e67-58eca8495490"
