k8s/ingress-private.yaml
# 2. INGRESS CHO LOGGING & TRACING (Namespace: ecommerce)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
spec:
  ingressClassName: nginx-internal
  rules:
    - host: grafana.ntdevopsmlflow.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: loki.ntdevopsmlflow.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100

---
# 3. INGRESS CHO TRACING (Namespace: monitoring)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracing-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
spec:
  ingressClassName: nginx-internal
  rules:
    - host: jaeger.ntdevopsmlflow.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 16686

---
# 4. INGRESS CHO METRICS (Namespace: cmc-monitoring)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: cmc-monitoring
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
spec:
  ingressClassName: nginx-internal
  rules:
    - host: prometheus.ntdevopsmlflow.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
